sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:12: error: not found: value lgr
for(j<-0 to lgr-2) {
            ^AlgBubbleSort1:32: error: type mismatch;
 found   : Unit
 required: Boolean
} while (change=true)
               ^